--- a/html/projets2.html
+++ b/html/projets2.html
@@ -14,13 +14,13 @@
 
 <body>
        
-    <a href="../home2.html">
+    <a href="../index.html">
         <div id="home">
             HOME
         </div> 
     </a>
 
-    <a href="../home2.html">
+    <a href="../index.html">
         <div id="home2">
             HOME
         </div> 
