--- a/html/about.html
+++ b/html/about.html
@@ -41,7 +41,7 @@
     </div>
 
     <div id="moi">
-        <img src="../img/photodemoi.png">
+        <img src="../img/photodemoi.PNG">
     </div>
     <a href="../img/cv.jpg" download="cv.jpg">
     <div id="cv">
