--- a/html/about.html
+++ b/html/about.html
@@ -15,18 +15,18 @@
 
     <a href="../index.html">
         <div id="home">
-            HOME
+           ACCUEIL
         </div> 
     </a>
 
     <a href="../index.html">
         <div id="home2">
-            HOME
+            ACCUEIL
         </div> 
     </a>
 
         <div id="about">
-            ABOUT ME
+            À PROPOS
         </div>
 
     <div id="text1">
