--- a/html/contact.html
+++ b/html/contact.html
@@ -15,13 +15,13 @@
 
     <a href="../index.html">
         <div id="home">
-            HOME
+            ACCUEIL
         </div> 
     </a>
 
     <a href="../index.html">
         <div id="home2">
-            HOME
+            ACCUEIL
         </div> 
     </a>
 
