--- a/html/projets2.html
+++ b/html/projets2.html
@@ -16,13 +16,13 @@
        
     <a href="../index.html">
         <div id="home">
-            HOME
+            ACCUEIL
         </div> 
     </a>
 
     <a href="../index.html">
         <div id="home2">
-            HOME
+            ACCUEIL
         </div> 
     </a>
 
@@ -30,7 +30,7 @@
             PROJETS
         </div>
         <div class="couleurs">
-            CHOOSE A COLOR
+            CHOISISSEZ UNE COULEUR
         </div>
         
     <div id="conteneur">
